优化SpringAI，持久化策略更改为数据库持久化